# bqn-jax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: _bench_utils.py  bencharray_recreated.py  boxed_paths_benchmarks.py  ds_pipeline_benchmarks.py  jax_workloads.py  monad_dyad_benchmarks.py  perf_benchmarks.py  scaling_benchmarks.py  valence_benchmarks.py
benchmarks/baselines/: bench_md_top5_baseline.json
benchmarks/output/bencharray_recreated/: timings-20260214T014729Z.json  timings-20260214T014813Z.json
benchmarks/output/conformance/: bench_md_candidate.json  bench_md_top5_gate-local.json  bench_md_top5_gate.json  benchmark_gate.json  cbqn_catalog.json  ci_dashboard.json  ci_dashboard.md  full_spec_audit.json  full_spec_audit.md  spec_conformance.json  spec_conformance.md
examples/: gradient_descent_visual.ipynb  mlp_polynomial.ipynb
examples/tutorials/: README.md
examples/tutorials/one_shot/: 01_expressions.ipynb  02_list_manipulation.ipynb  03_combinators.ipynb  04_variables.ipynb
examples/tutorials/stateful/: 01_expressions.ipynb  02_list_manipulation.ipynb  03_combinators.ipynb  04_variables.ipynb
scripts/: batch_stateful_test.py  bench_md_top5_gate.py  bench_md_trends.py  benchmark_stability_gate.py  cbqn_catalog_report.py  ci_pass_dashboard.py  ci_perf_snapshot.py  perf_compile_gate.py  simple_mlp_jaxbqn.py  spec_conformance_runner.py  spec_full_audit.py
src/bqn_jax/: __init__.py  ast.py  cbqn_catalog.py  conformance.py  errors.py  evaluator.py  ir.py  lexer.py  parser.py  values.py
tests/: primitive_matrix_cases.py  test_bench_md_trends.py  test_bqncrate_examples.py  test_cbqn_catalog.py  test_cbqn_differential_matrix.py  test_evaluate_overloads.py  test_inferred_properties.py  test_jax_ir_equivalence.py  test_jax_ir_pipeline.py  test_lexer_and_literal_coverage.py  test_parser_grammar_conformance.py  test_parser_language_syntax.py  test_primitive_modifier_matrix.py  test_readme_examples.py  test_runtime_language_semantics.py  test_runtime_value_model.py  test_system_surface.py  test_transform_hygiene.py  test_tutorial_and_cbqn_examples.py
